[package]
name = "calendar"
version = "0.1.0"
authors = ["Lucas Bataglião <batagliao@gmail.com>"]
description = "A command line calendar"
readme = "README.md"
homepage = "https://github.com/batagliao/calendar"
repository = "https://github.com/batagliao/calendar"
keywords = ["cli", "calendar", "tool", "simple"]
categories = ["command-line-utilities"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
crossterm = "0.27.0"
term_grid = "0.2.0"
unicode-width = "0.1.11"
